Sat Aug  7 08:26:26 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_chown): Pathname#chown translated
	  from pathname.rb.

Sat Aug  7 02:09:04 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_lchmod): Pathname#lchmod translated
	  from pathname.rb.

Fri Aug  6 21:30:06 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_chmod): Pathname#chmod translated from
	  pathname.rb.

Fri Aug  6 20:13:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* rational.c (nurat_div): divided by infinity should be zero.

	* rational.c (nurat_div): divided by float zero should be
	  infinity.  [ruby-core:31626]

Fri Aug  6 18:59:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (realpath_rec): rb_str_modify depends on the length, so
	  resize instead.

Fri Aug  6 18:56:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (clean-ext): fixed directories to be removed.

Fri Aug  6 17:42:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/depend: add space at the begginig of @ignore_error.

	* lib/mkmf.rb: ditto.

Fri Aug  6 17:38:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (clean): add  prelude.c, config.log, and rbconfig.rb.

	* common.mk (distclean): remove encdb.h, config.log, and rbconfig.rb.

Fri Aug  6 17:35:24 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in: ignore error from RMDIRS.

	* enc/depend: ditto.

	* lib/mkmf.rb: ditto.

Fri Aug  6 05:53:32 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_mtime): Pathname#mtime translated from
	  pathname.rb.

Thu Aug  5 22:09:30 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_ctime): Pathname#ctime translated from
	  pathname.rb.

Thu Aug  5 21:20:31 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (NODE_ARGSCAT, NODE_ARGSPUSH): drop unused ARGSCAT
	  results when poped is true.  [ruby-dev:41933], [Bug #3658]
	  This is retry of r28870 and r28873 which were reverted.
