@@ -1,3 +1,11 @@
+Sat Aug  7 09:28:12 2010  Tanaka Akira  <akr@fsij.org>
+
+	* test/ruby/envutil.rb (assert_normal_exit): use assert.  fix
+	  faildesc.
+
+	* test/pathname/test_pathname.rb (test_lchmod): test Pathname#lchmod
+	  using assert_normal_exit.
+
 Sat Aug  7 08:26:26 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pathname/pathname.c (path_chown): Pathname#chown translated
